--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,61 +1,114 @@
 /* Mobile */
-@media screen and (max-width: 740px) {
-  #nav > li {
-      display: block;
-  }   
+@media (max-width: 46.1875em){
+    .s-full-width,
+    .s-col-full{
+        width: 100% !important;
+    }
+    .column-main{
+        width: calc(100%/5);
+    }
+    .s-mt-8{
+        margin-top: 8 !important;
+    }
 
-  #nav {
-      display: block;
-      /* Make the navigation vertical for small screens */
-  }
+    #header{
+        overflow: hidden;
+    }
 
-  #header .search-btn {
-      display: none;
-  }
+    #header .mobile-menu-btn{
+        display: block;
+    }
 
-  #slider .text-content {
-      bottom: 20px;
-  }
+    #header .search-btn{
+        display: none;
+    }
 
-  .member-list {
-      display: flex;
-      flex-wrap: wrap;
-  }
+    #header #nav:first-child{
+        display: inline-block;
+    }
 
-  .member-list .col {
-      width: 100%;
-  }
+    #nav{
+        display: block;
+    }
 
-  .ticket-list li {
-      padding: 11px 0;
-      text-align: center;
-  }
+    #nav li a{
+        padding: 1px 24px;
+    }
+    
+    #nav > li{
+        display: block;
+    }
 
-  .place-list .col {
-      width: 100%;
-      margin-bottom: 24px;
-  }
+    #nav .subnav{
+        position: initial;
+        background: #333;
+    }
 
-  .contact-content {
-      flex-direction: column;
-  }
+    #nav .subnav a{
+        color: #fff;
+        padding: 5px 41px;
+    }
 
-  .contact-info {
-      margin-bottom: 20px;
-      text-align: center;
-  }
+    #content .member-img{
+        width: 60%;
+    }
 
-  .contact-form .form-control {
-      width: 100%;
-  }
+    .places-list .btn{
+        text-align: center;
+    }
+
+    .contact-form{
+        margin-top: 32px;
+    }
+}
+
+/* Tablet and mobile */
+@media (max-width: 63.9375em){
+    .btn{
+        padding: 15px 16px;
+    }
+
+    #nav .subnav a{
+        padding: 5px 12px;
+    }
+
+    .contact-form .form-control{
+        padding: 15px;
+        font-size: 16px;
+    }
+
+    .contact-info{
+        line-height: 2;
+    }
+
+    .contact-submit-btn{
+        font-size: 16px;
+    }
+
+    #footer .socials-list{
+        font-size: 48px;
+    }
+
+    #footer .socials-list a{
+        margin: 0 8px;
+    }
+
+    #footer .copyright a{
+        padding: 12px 0;
+        display: inline-block;
+    }
 }
 
 /* Tablet */
-@media screen and (min-width: 740px) and (max-width: 1024px) {
-  /* Add specific styles for tablets here */
+@media (min-width: 46.25rem) and (max-width: 63.9375em){
+    .column-main{
+        width: calc(100%/5);
+    }
 }
 
-/* PC (Desktop) */
-@media screen and (min-width: 1025px) {
-  /* Add specific styles for desktop screens here */
+/* PC */
+@media (min-width: 64rem){
+.column-main{
+    width: calc(100%/5);
+}
 }
